WiP Skip long running post save operations
If a post save operation takes too long then it will be canceled and the
user will be asked if he/she wants to trigger it again at his/her own
risk (post save actions currently block the UI).

--- a/org.eclipse.jdt.core.manipulation/core extension/org/eclipse/jdt/internal/corext/fix/FixMessages.properties
+++ b/org.eclipse.jdt.core.manipulation/core extension/org/eclipse/jdt/internal/corext/fix/FixMessages.properties
@@ -25,6 +25,10 @@ CleanUpRefactoring_could_not_retrive_profile=Could not retrieve profile for proj
 CleanUpRefactoring_ProcessingCompilationUnit_message=Processing compilation unit {0} of {1} ({2})
 CleanUpRefactoring_checkingPostConditions_message=Checking post conditions
 CleanUpRefactoring_exception=Exception occurred while changing ''{0}''.
+CleanUpRefactoring_operation_too_long_description=The operation ''{0}'' was taking too long so it was canceled. What would you like to do?
+CleanUpRefactoring_operation_too_long_title=Operation taking too long
+CleanUpRefactoring_restart_operation=Restart it (blocks the UI)
+CleanUpRefactoring_skip_operation=Skip it
 
 CleanUpRegistry_ErrorTabPage_description=An error occurred while creating this page:\n{0}\n\nSee the error log for details.
 CleanUpRegistry_ErrorTabPage_preview=No preview available
